--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "ethereum-lottery",
+  "name": "constant-deposit-lottery",
   "version": "1.0.0",
   "description": "An Ethereum implementation of a constant-deposit multiparty lottery inspired by http://eprint.iacr.org/2016/955",
   "dependencies": {
+    "co": "^4.6.0",
+    "co-prompt": "^1.0.0",
+    "commander": "^2.9.0",
     "dateformat": "^2.0.0",
     "fs": "^0.0.1-security",
     "left-pad": "^1.1.3",
@@ -11,8 +14,8 @@
     "winston": "^2.3.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "start": "echo \"Not implemented yet\" && exit 1"
+  "bin": {
+    "lottery": "./index.js"
   },
   "keywords": [
     "ethereum",
