--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "commander": "^2.9.0",
     "dateformat": "^2.0.0",
     "fs": "^0.0.1-security",
+    "js-sha3": "^0.9.3",
     "left-pad": "^1.1.3",
     "require": "^2.4.20",
     "web3": "^0.17.0-beta",
     "winston": "^2.3.0"
   },
-  "devDependencies": {},
   "bin": {
     "lottery": "./index.js"
   },
